# Kitty

./: .gitignore  .gitmodules  LICENSE  README.md  README_Rupert.md  README_Slurm.md  entire_cuda121.def  kitty_cuda121.def  pyproject.toml  rerun.md  rock_kv_cuda121.def  test_aime_baseline.sh  test_aime_rockkv.sh  test_gsm8k.sh
accuracy_simulation/: README.md  accuracy_eval.sh  accuracy_eval2.sh  accuracy_eval3.sh  utils.sh
accuracy_simulation/sbatch/: run_eval.sh  run_eval_comp_node.sh  run_eval_rupert.sh
eval_scripts/: accuracy_eval.sh  accuracy_eval5.sh  eval_channelkv.sh  eval_ratios.sh  gen_test.sh  sensitivity_check.sh  test.sh  utils.sh  utils_channelkv.sh
examples/: README.txt  a.txt  b.txt  benchmark_kchanboost.py  example_qwen3.py  run_qwen3_kchanboost.py
latency_benchmarking/: Mar29_results.csv  Mar30_results.csv  README.md  benchmark_kchanboost.py  benchmark_kitty.py  recompute_metrics.py  run_all.sh  run_benchmark.py
sbatch/: dynamic_run.sh  run_eval.sh  run_eval_ablation.sh  run_eval_comp_node.sh  run_eval_rupert.sh  submit_all_models.sh  test_single_gpu.sh
sbatch/extra_sbatch/: run_eval.sh  submit_all_models.sh  submit_phase2.sh
sbatch/hf_quant/: run_hf_quant_eval.sh
scripts/: generate_eval_readme.py  run_eval.sh  run_eval_ablation.sh  run_eval_comp_node.sh
scripts/hf_quant/: run_hf_quant_eval.sh
scripts_accuracy_simulation/: accuracy_eval4.sh  accuracy_eval6.sh  utils.sh
scripts_accuracy_simulation/sbatch/: run_eval_multi_task.sh
scripts_accuracy_simulation/sbatch/hf_quant/: run_hf_quant_eval.sh
src/kchanboost/kvcache/: __init__.py  kchanboost_attention.py  kchanboost_kv.py  utils.py  utils_kv_per_layer.py
src/kchanboost/models/: modeling_qwen3.py
src/kitty/kvcache/: __init__.py  kitty.py  utils_kv_per_layer.py
src/kitty_sim/: __init__.py  kitty_simulate.py  utils_quant.py
src/kitty_sim/cli/: eval_hf_kv.py  eval_rock_kv.py  utils_cli.py
src/kitty_sim/eval/: eval_helper.py  runner.py
src/rock_kv/: __init__.py  llama_rock_kv.py  rock_kv_cache.py  rock_kv_cache_simulate.py  utils_quant.py
src/rock_kv/cli/: eval_hf_kv.py  eval_rock_kv.py  gen_rock_kv.py  utils_cli.py
tests/: analyze.py  gen_kv_checkpoints.sh  gen_test.sh  utils_compute.py  utils_visualization.py  visualize_key_cache.py  visualize_quantize_a_channel.py
(+14 files in other folders)
