[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kitty"
version = "1.0.0"
description = "An accurate 2/4 bit KV Cache quantization method for LLMs."
authors = [
    { name = "Haojun Xia, Jisen Li, Xiaoxia Wu, Zhen Zheng, etc.",   email = "xhjustc@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
include = ["kitty_sim*", "kitty*"]


[project.scripts]
eval_kitty = "kitty_sim.cli.eval_kitty:main"
eval_hf_kv = "kitty_sim.cli.eval_hf_kv:main"

